--- a/importfbx/packages.config
+++ b/importfbx/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="openexr-msvc14-x64" version="2.2.0.7784" targetFramework="native" />
-  <package id="zlib-msvc14-x64" version="1.2.11.7795" targetFramework="native" />
+  <package id="openexr-msvc-x64" version="2.3.0.8788" targetFramework="native" />
+  <package id="zlib-msvc-x64" version="1.2.11.8900" targetFramework="native" />
 </packages>
