--- a/importfbx/ImportFBX2017.vcxproj
+++ b/importfbx/ImportFBX2017.vcxproj
@@ -89,7 +89,7 @@
       <DataExecutionPrevention>
       </DataExecutionPrevention>
       <ForceFileOutput>MultiplyDefinedSymbolOnly</ForceFileOutput>
-      <AdditionalOptions>/IGNORE:4006 %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/IGNORE:4075 /IGNORE:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -120,7 +120,7 @@
       <DataExecutionPrevention>
       </DataExecutionPrevention>
       <ForceFileOutput>MultiplyDefinedSymbolOnly</ForceFileOutput>
-      <AdditionalOptions>/IGNORE:4006 %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/IGNORE:4075 /IGNORE:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
