--- a/cmofilewriter/CMOFileWriter2019.vcxproj
+++ b/cmofilewriter/CMOFileWriter2019.vcxproj
@@ -95,6 +95,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CMO.h" />
     <ClInclude Include="CMOFileWriter.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
