--- a/.github/linters/.editorconfig-checker.json
+++ b/.github/linters/.editorconfig-checker.json
@@ -3,5 +3,9 @@
     "exclude": [
         ".git",
         "LICENSE"
-    ]
+    ],
+    "Disable": {
+        "Indentation": true,
+        "IndentSize": true
+    }
 }
